# basilisk

./: .BBSoptions  .Rbuildignore  .gitignore  DESCRIPTION  NAMESPACE  README.md  configure  configure.ac  configure.win  paper.md  ref.bib
.github/: README.md
.github/scripts/: make_deb.sh
.github/workflows/: build_devel_linux_single.yaml  run_bbs.yaml
R/: BasiliskEnvironment.R  PyPiLink.R  activate.R  activateEnvironment.R  basiliskStart.R  configureBasiliskEnv.R  createLocalBasiliskEnv.R  extpack_config.R  findPersistentEnv.R  findVersionUpTo.R  getEnvironmentDir.R  globals.R  importModule.R  installModules.R  installPythonPackages.R  listCorePackages.R  obtainEnvironmentPath.R  options.R  setupBasiliskEnv.R  setupVirtualEnv.R  useBasilisk.R  useBasiliskEnv.R  useBiocPython.R  useVirtualEnv.R  utils.R  zzz.R
inst/: CITATION  NEWS.Rd  README.md  core_deps  core_list  generate_core_list.R
inst/core_lists/: linux  macosx  win32  win64
inst/example/: .Rbuildignore  .gitignore  DESCRIPTION  NAMESPACE  configure  configure.ac
inst/example/R/: basilisk.R  test.R  zzz.R
inst/example/inst/test_dummy/: setup.py
inst/example/inst/test_dummy/test_dummy/: __init__.py
inst/example/man/: test.Rd
inst/example/tests/: testthat.R
inst/example/tests/testthat/: test-basic.R
longtests/: testthat.R
man/: BasiliskEnvironment-class.Rd  PyPiLink.Rd  activateEnvironment.Rd  basiliskOptions.Rd  basiliskStart.Rd  configureBasiliskEnv.Rd  createLocalBasiliskEnv.Rd  findPersistentEnv.Rd  findVersionUpTo.Rd  getEnvironmentDir.Rd  importModule.Rd  installModules.Rd  installPythonPackages.Rd  listCorePackages.Rd  listPackages.Rd  obtainEnvironmentPath.Rd  pandas_spec.Rd  pandas_spec_pip.Rd  python_dateutil_spec_pip.Rd  pytz_spec_pip.Rd  scikit_learn_spec.Rd  scikit_learn_spec_pip.Rd  setupBasiliskEnv.Rd  setupVirtualEnv.Rd  useBasilisk.Rd  useBasiliskEnv.Rd  useBiocPython.Rd  useVirtualEnv.Rd
src/: .gitignore  Makevars.in
tests/: testthat.R
tests/testthat/: setup.R  test-clear.R  test-install.R  test-lazy.R  test-local.R  test-options.R  test-package.R  test-start.R
vignettes/: motivation.Rmd
